# M5-CoreS3

./: .clangd  .gitignore  CMakeLists.txt  GITHUB_UPLOAD_CHECKLIST.md  PLAN9.md  PROJECT.md  README.md  log.md  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.m5cores3  sdkconfig.esp32s3  sdkconfig.m5cores3  sdkconfig.squeezeamp
.githooks/: pre-commit
.github/workflows/: ci-release.yml
.trae/documents/: add-temperature-voice-tool.md  audio_transcription_plan.md  auto-brightness-ltr553.md  check-omni-tool-calling.md  code_review_bugfix_plan.md  conversation-window-and-fixes.md  cpu-core-allocation-optimization.md  display-sensor-data-on-screen.md  esp32-internal-ram-optimization.md  esp32-ram-optimization-plan.md  fix-audio-ringbuf-overflow.md  fix-crash-and-screen-flicker.md  fix-memory-allocation-issue.md  fix-playback-and-optimize-oss.md  fix-playback-silence-timeout.md  fix-ui-colors.md  fix-voice-noise-and-sensor.md  fix-voice-playback-current-noise.md  full_refactoring_plan.md  oneshot-http-prompt-and-tools-check.md  opus_encoding_fix_plan.md  phase2.1_modular_refactoring_plan.md  pixel-buddy-face-optimized.md  remove-realtime-websocket-voice.md  remove-voice-tools.md  voice-assistant-optimization-plan.md  voice-playback-final-fix.md  voice-playback-stutter-fix.md  voice_complete_rewrite_plan.md  voice_flow_optimization_plan.md  wakeword-not-responding-diagnosis.md
components/airplay_core/: CMakeLists.txt  airplay_events.c  airplay_events.h  airplay_interface.c  airplay_interface.h  airplay_service.c  airplay_service.h  receiver_state.c  receiver_state.h
components/airplay_core/plist/: bplist_parser.c
components/airplay_core/rtsp/: rtsp_conn.c  rtsp_conn.h  rtsp_events.c  rtsp_events.h  rtsp_handler_announce.c  rtsp_handler_common.c  rtsp_handler_common.h  rtsp_handler_metadata.c  rtsp_handler_options.c  rtsp_handler_record.c  rtsp_handler_setup.c  rtsp_handlers.c  rtsp_handlers.h  rtsp_message.c  rtsp_rsa.c  rtsp_server.c  rtsp_server.h
components/app_core/: CMakeLists.txt  Kconfig.projbuild  app_core.c  app_core.h  app_events.c  app_events.h  perf_monitor.c  perf_monitor.h  settings.c  settings.h
components/audio-resampler/: resampler.c
components/audio_core/: CMakeLists.txt  audio_interface.c  audio_interface.h  audio_pipeline.c  audio_pipeline.h
components/audio_core/audio/: audio_buffer.c  audio_buffer.h  audio_crypto.c  audio_decoder.c  audio_dsp.c  audio_dsp.h  audio_eq.c  audio_fidelity.h  audio_output.h  audio_output_common.c  audio_output_common.h  audio_output_cores3.c  audio_receiver.c  audio_receiver.h  audio_resample.c  audio_stream.c  audio_stream.h  audio_stream_buffered.c  audio_stream_realtime.c  audio_timing.c  audio_timing.h  audio_volume.c  audio_volume.h
components/audio_core/resampler/: resampler.c  resampler.h
components/audio_core/resource/: resource_manager.c  resource_manager.h
components/auto_brightness/: CMakeLists.txt  auto_brightness.c  auto_brightness.h  ltr553.c  ltr553.h
components/board_cores3/: CMakeLists.txt  Kconfig.projbuild  board.c  board_common.h  iot_board.h  partitions.csv
components/board_utils/: board_utils.c
components/boards/: CMakeLists.txt  Kconfig.projbuild  board_common.h
components/boards/m5stack-core-s3/: board.c  iot_board.h
components/dac_tas57xx/: dac_tas57xx.c
components/dac_tas58xx/: Kconfig  dac_tas58xx_eq.h  dac_tas58xx_eq_data.h
components/env_monitor/: CMakeLists.txt  env_interface.c  env_interface.h  env_monitor.c  env_monitor.h
components/event_bus/: CMakeLists.txt  event_bus.c  event_bus.h  event_ids.h  event_types.h
components/network_core/: CMakeLists.txt
components/network_core/network/: mdns_airplay.c  mdns_airplay.h  ntp_clock.c  wifi.c  wifi.h  wifi_credentials.c  wifi_credentials.h
components/realtime_voice/: CMakeLists.txt  afe_bridge.c  afe_bridge.h  audio_ringbuf.c  audio_ringbuf.h  idf_component.yml  omni_client.c  omni_client.h  realtime_voice.c  realtime_voice.h  resampler_bridge.c  voice_api_client.c  voice_api_client.h  voice_common.c  voice_common.h  voice_controller.c  voice_controller.h  voice_dsp.c  voice_dsp.h  voice_events.c  voice_events.h  voice_frontend.c  voice_frontend.h  voice_frontend_v2.c  voice_frontend_v2.h  voice_interface.c  voice_interface.h  voice_internal_types.h  voice_player.c  voice_player.h  voice_playout.c  voice_playout.h  voice_playout_drain.c  voice_playout_drain.h  voice_reference.c  voice_reference.h  voice_request.c  voice_request.h  voice_speaker.c  voice_speaker.h  (+4 more)
components/screen_ui/: CMakeLists.txt  (+13 more)
components/sedentary_monitor/: CMakeLists.txt  sedentary_alert.c  sedentary_alert.h  sedentary_camera.c  sedentary_camera.h  sedentary_local_detect.c  sedentary_local_detect.h  sedentary_monitor.c  sedentary_monitor.h
config/: config.toml.example
docs/: audio-fidelity-qa.md  build-and-verify.md  core-architecture.md  env-monitor.md  sedentary-monitor.md  voice-interaction.md  voice-prompt-spec.md
main/: CMakeLists.txt  Kconfig.projbuild  airplay_service.c  audio_pipeline.c  audio_pipeline.h  dacp_client.c  dacp_client.h  idf_component.yml  led.c  led.h  main.c  playback_control.c  receiver_state.c  receiver_state.h  settings.c  settings.h  status_service.c  status_service.h  system_actions.c  system_actions.h  usb_control_service.c  usb_control_service.h
main/audio/: audio_buffer.c  audio_decoder.c  audio_dsp.c  audio_dsp.h  audio_eq.c  audio_eq.h  audio_output.h  audio_output_common.c  audio_output_common.h  audio_output_cores3.c  audio_receiver.c  audio_stream_realtime.c  audio_timing.c  audio_timing.h
main/network/: dns_server.c  log_stream.c  log_stream.h  mdns_airplay.c  mdns_airplay.h  ntp_clock.c  ntp_clock.h  ota.c  socket_utils.c  socket_utils.h  structured_trace.c  structured_trace.h  web_server.c  web_server.h  wifi.c  wifi.h
main/plist/: bplist_parser.c
main/rtsp/: rtsp_conn.h  rtsp_events.c  rtsp_handlers.c  rtsp_handlers.h  rtsp_message.c  rtsp_rsa.c  rtsp_rsa.h  rtsp_server.c
scripts/: check-fast.sh  lint.sh  pio_prebuild.py
tools/: agent_serial_debug_bridge.py  provision_wifi.sh
(+28 files in other folders)
