idf_component_register(
    SRCS
        "airplay_service.c"
        "receiver_state.c"
        "airplay_interface.c"
        "airplay_events.c"
        "rtsp/rtsp_conn.c"
        "rtsp/rtsp_events.c"
        "rtsp/rtsp_handler_announce.c"
        "rtsp/rtsp_handler_common.c"
        "rtsp/rtsp_handler_metadata.c"
        "rtsp/rtsp_handler_options.c"
        "rtsp/rtsp_handler_record.c"
        "rtsp/rtsp_handler_setup.c"
        "rtsp/rtsp_handlers.c"
        "rtsp/rtsp_message.c"
        "rtsp/rtsp_rsa.c"
        "rtsp/rtsp_server.c"
        "plist/plist_xml.c"
        "plist/bplist_parser.c"
        "plist/bplist_builder.c"
        "plist/base64.c"
    INCLUDE_DIRS
        "."
        "rtsp"
        "plist"
    REQUIRES
        audio_core
        network_core
        board_cores3
        screen_ui
        json
        mbedtls
        esp_timer
        esp_netif
        esp_wifi
        event_bus
)

# ── Removed: target_include_directories for app_core (layering: Layer 3 → Layer 4 violation)
