idf_component_register(
    SRCS
        "audio_pipeline.c"
        "audio_interface.c"
        "resampler/resampler.c"
        "audio/alac_magic_cookie.c"
        "audio/audio_buffer.c"
        "audio/audio_crypto.c"
        "audio/audio_decoder.c"
        "audio/audio_dsp.c"
        "audio/audio_eq.c"
        "audio/audio_output_common.c"
        "audio/audio_output_cores3.c"
        "audio/audio_receiver.c"
        "audio/audio_resample.c"
        "audio/audio_stream.c"
        "audio/audio_stream_buffered.c"
        "audio/audio_stream_realtime.c"
        "audio/audio_timing.c"
        "audio/audio_volume.c"
        "resource/resource_manager.c"
    INCLUDE_DIRS
        "."
        "audio"
        "resampler"
        "resource"
    REQUIRES
        board_cores3
        esp_common
        esp_timer
        event_bus
        nvs_flash
        esp_audio_codec
        esp_codec_dev
        esp_driver_i2s
        mbedtls
        libsodium
        network_core
)

# ── Removed: target_include_directories for airplay_core/rtsp (layering: Layer 2 → Layer 3 violation)
