idf_component_register(
    SRCS
        "realtime_voice.c"
        "voice_controller.c"
        "voice_frontend_v2.c"
        "omni_client.c"
        "voice_player.c"
        "audio_ringbuf.c"
        "voice_common.c"
        "voice_dsp.c"
        "voice_playout.c"
        "voice_speaker.c"
        "voice_interface.c"
        "voice_events.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        audio_core
        auto_brightness
        env_monitor
        event_bus
        m5stack_core_s3
        esp_http_client
        json
        mbedtls
        esp_timer
)
